...
          />

          {/* Pestaña de Inicio */}
          <Tabs.Screen
            name="home"
            options={{
              title: "Inicio",
              headerShown: false,
              tabBarIcon: ({ color }) => (
                <Ionicons name="home-outline" size={22} color={color} />
              ),
            }}
          />
...
